# kicad-parse-gen

./: .gitignore  .travis.yml  COPYING  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  search-index.js
dump_footprint/: index.html
dump_layout/: index.html
examples/: SILABS_EFM32_QFN24.kicad_mod  breakout-cache.lib  ex1.rs  ex2.rs  ex3.rs  ex4.rs  hgminiUSBC.sch  usbser.kicad_pcb
examples/kicad_mod/: SILABS_EFM32_QFN24.kicad_mod  SOT-23.kicad_mod
identify/: index.html
kicad_parse_gen/: FromSexp.t.html  KicadFile.t.html  enum.Expected.html  enum.KicadFile.html  enum.Sexp.html  fn.from_sexp.html  fn.read_file.html  fn.read_kicad_file.html  fn.read_layout.html  fn.read_module.html  fn.read_project.html  fn.read_schematic.html  fn.read_symbol_lib.html  fn.write_file.html  fn.write_layout.html  from_sexp.v.html  index.html  read_file.v.html  read_kicad_file.v.html  read_layout.v.html  read_module.v.html  read_project.v.html  read_schematic.v.html  read_symbol_lib.v.html  sidebar-items.js  trait.BoundingBox.html  trait.FromSexp.html  write_layout.v.html
kicad_parse_gen/error/: enum.Error.html  index.html  (+5 more)
src/: build.rs  checkfix.rs  decode.rs  encode.rs  error.rs  escaped.rs  footprint.rs  formatter.rs  fp_lib_table.rs  klc.rs  layout.rs  lib.rs  project.rs  schematic.rs  schematic2.rs  sym_lib_table.rs  symbol_lib.rs  test.rs  test_data.rs  test_data.rs.in  util.rs
symbolic_expressions/: enum.Error.html  enum.Sexp.html  fn.encode_string.html  fn.parse_error.html  fn.str_error.html  index.html  sidebar-items.js  struct.ParseError.html  trait.Formatter.html  trait.IntoSexp.html  type.Result.html  type.Rules.html
tests/: footprint1.rs  footprint2.rs  fp-lib-table1.rs  layout1.rs  layout2.rs  schematic1.rs  schematic2.rs  symbol_lib1.rs
(+296 files in other folders)
