[package]
name = "kicad_parse_gen"
version = "4.4.0"
authors = ["Joost Damad <joost@productize.be>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/productize/kicad-parse-gen"
documentation = "https://docs.rs/kicad_parse_gen"
description = "Kicad file format parser and generator library"

[dependencies]
#symbolic_expressions = { git = "git://github.com/productize/symbolic-expressions.git" }
symbolic_expressions = "~4.1.7"
error-chain = "0.10"
log = "0.3"
 env_logger = "0.4"

[dev-dependencies]
difference = "1.0"
